--- a/src/main/resources/templates/reservation_search.html
+++ b/src/main/resources/templates/reservation_search.html
@@ -9,8 +9,8 @@
   <p> Search for Available rooms</p>
 
   <form action="/hotel/search" method="post">
-    <label for="Date" required>Date:</label>
-    <input type="date" id="Date" name="Date" value=""><br>
+    <label for="date" required>Date:</label>
+    <input type="date" id="date" name="date" value=""><br>
     <input type="submit" value="Submit">
   </form>
 
