--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,17 +7,17 @@
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+		<script type= "text/Javascript" src="js/src/functions.js"></script>
 		
 	</head>
 	<body>
 		<div class="container text-center">
 			<h1>Hotel Bookings</h1>
 			<span> Please login to view your reservations: </span> <br/>
-			<a href="/login">Login</a>
-			<a href="/hotel/search">Search for Hotels</a>
-			<a href="">Make a reservation</a>
-			<a href="">Delete a reservation</a>
-			<a href="/logout">Logout</a>
+			<a href="/login" class="loggedOutField">Login</a>
+			<a href="/hotel/search" class="loggedInField">Search for Hotels</a>
+<!-- 			<a href="#" class="loggedInField">Delete a reservation</a> -->
+			<a href="/logout" class="loggedInField">Logout</a>
 		</div>
 	</body>
 </html>
