Html tidying and UserServiceTest missing test.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,10 +14,10 @@
 		<div class="container text-center">
 			<h1>Hotel Bookings</h1>
 			<span> Please login to view your reservations: </span> <br/>
-			<a href="/login" class="loggedOutField">Login</a>
-			<a href="/hotel/search" class="loggedInField">Search for Hotels</a>
+			<a href="/login" class="loggedOutField btn btn-primary" role="button">Login</a>
+			<a href="/hotel/search" class="loggedInField btn btn-primary" role="button">Search for Hotels</a>
 <!-- 			<a href="#" class="loggedInField">Delete a reservation</a> -->
-			<a href="/logout" class="loggedInField">Logout</a>
+			<a href="/logout" class="loggedInField btn btn-primary" role="button">Logout</a>
 		</div>
 	</body>
 </html>
