--- a/src/main/resources/templates/available_reservations.html
+++ b/src/main/resources/templates/available_reservations.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <table>
-        <thead>
-        <tr>
-            <th>Hotel</th>
-            <th>Price</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="reservation, stat : *{reservations}">
-            <td th:text="*{reservation.hotelName}" /></td>
-            <td th:text="*{reservation.hotelPricePerDay}" /></td>
-        </tr>
-        </tbody>
-    </table>
-
-
-
-</body>
+<html xmlns:th="www.thymeleaf.org">
+	<head>
+	    <meta charset="UTF-8">
+	    <title>HotelSearch</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script type= "text/Javascript" src="js/src/functions.js"></script>
+	</head>
+	<body>
+		<div class="container">
+		    <table class = "table">
+		        <thead>
+		        <tr>
+		            <th scope="col">Hotel</th>
+		            <th scope="col">Price (per Night)</th>
+		            <th scope="col">City</th>
+		            <th scope="col">State</th>
+		            <th scope="col">Available Date</th>
+		            <th scope="col"></th>
+		        </tr>
+		        </thead>
+		        <tbody>
+		        <tr th:each="reservation, stat : *{reservations}">
+		            <td th:text="*{reservation.hotelName}"/></td>
+		            <td th:text="*{reservation.hotelPricePerDay}"/></td>
+		            <td th:text="*{reservation.hotelCity}"/></td>
+		            <td th:text="*{reservation.hotelState}"/></td>
+		            <td th:text="*{reservation.availableDate}"/></td>
+		            <td>
+<!-- 		            	<form th:action="@{/api/reservation}" th:object=${hotel} method="post"> -->
+		            	<form th:action="@{#}">
+		            		<button class = "btn btn-primary"> Reserve </button>
+		            	</form>
+		            </td>
+		        </tr>
+		        </tbody>
+		    </table>
+	    </div>
+	</body>
 </html>
