--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="container text-center">
 			<h1>Hotel Bookings</h1>
-			<span> Please login to view your reservations: </span> <br/>
+			<span class="loggedOutField"> Please login to view your reservations: </span> <br/>
 			<a href="/login" class="loggedOutField btn btn-primary" role="button">Login</a>
 			<a href="/hotel/search" class="loggedInField btn btn-primary" role="button">Search for Hotels</a>
 <!-- 			<a href="#" class="loggedInField">Delete a reservation</a> -->
